--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>My Homepage</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Homepage</title>
+</head>
+<body>
+  <h1>Hello from Pratyush!</h1>
+  <p>This is my personal site for WAPH.</p>
+</body>
+</html>
